<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        app:theme="@style/ToolbarTheme"
        android:id="@+id/toolbarChiTienTuVan"
        app:title="@string/records_detail"
        app:titleTextColor="@color/colorAccent1"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </androidx.appcompat.widget.Toolbar>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorAccent1"/>
    <FrameLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:background="#F7EFEEEE"
                    android:padding="10dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:textSize="20sp"
                        android:textColor="@color/colorAccent1"
                        android:gravity="center"
                        android:text="@string/records_detail_doctor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </TextView>
                    <TextView
                        android:textColor="@color/colorAccent1"
                        android:textSize="16sp"
                        android:layout_marginTop="8dp"
                        android:text="@string/doctor_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:padding="10dp"
                        android:layout_marginTop="8dp"
                        android:orientation="vertical"
                        android:background="@drawable/customlistview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:layout_weight="2"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <LinearLayout
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="8dp"
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <TextView
                                    android:textColor="@color/colorBlack"
                                    android:text="@string/doctor_diagnosis"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content">
                                </TextView>
                                <TextView
                                    android:paddingLeft="12dp"
                                    android:id="@+id/txtBacSi"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content">
                                </TextView>
                            </LinearLayout>
                            <LinearLayout
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="8dp"
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <TextView
                                    android:textColor="@color/colorBlack"
                                    android:text="@string/age"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content">
                                </TextView>
                                <TextView
                                    android:paddingLeft="12dp"
                                    android:id="@+id/txtTuoiBacSi"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content">
                                </TextView>
                            </LinearLayout>
                            <LinearLayout
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="8dp"
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <TextView
                                    android:textColor="@color/colorBlack"
                                    android:text="@string/phone_number"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content">
                                </TextView>
                                <TextView
                                    android:paddingLeft="12dp"
                                    android:id="@+id/txtBSPhone"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content">
                                </TextView>
                            </LinearLayout>
                            <LinearLayout
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="8dp"
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <TextView
                                    android:textColor="@color/colorBlack"
                                    android:text="@string/email"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content">
                                </TextView>
                                <TextView
                                    android:paddingLeft="12dp"
                                    android:id="@+id/txtBSEmail"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content">
                                </TextView>
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>

                    <TextView
                        android:textColor="@color/colorAccent1"
                        android:textSize="16sp"
                        android:layout_marginTop="8dp"
                        android:text="@string/patient_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:padding="10dp"
                        android:layout_marginTop="8dp"
                        android:orientation="vertical"
                        android:background="@drawable/customlistview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:textColor="@color/colorBlack"
                                android:text="@string/patient_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                            </TextView>
                            <TextView
                                android:paddingLeft="12dp"
                                android:id="@+id/txtTenBenhNhan"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                            </TextView>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:textColor="@color/colorBlack"
                                android:text="@string/age"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                            </TextView>
                            <TextView
                                android:paddingLeft="12dp"
                                android:id="@+id/txtTuoiBenhNhan"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                            </TextView>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:textColor="@color/colorBlack"
                                android:text="@string/patient_content"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                            </TextView>
                            <TextView
                                android:paddingLeft="12dp"
                                android:id="@+id/txtBenhCanChanDoan"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                            </TextView>
                        </LinearLayout>
                    </LinearLayout>

                    <TextView
                        android:background="@color/colorAccent1"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_marginTop="8dp"
                        android:text="@string/patient_diagnosis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:padding="10dp"
                        android:layout_marginTop="8dp"
                        android:orientation="vertical"
                        android:background="@drawable/customlistview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:textColor="@color/colorBlack"
                                android:text="@string/b_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                            </TextView>
                            <TextView
                                android:paddingLeft="12dp"
                                android:id="@+id/txtBSTenBenh"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                            </TextView>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:textColor="@color/colorBlack"
                                android:text="@string/diagnosis"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                            </TextView>
                            <TextView
                                android:paddingLeft="12dp"
                                android:id="@+id/txtBSChanDoan"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                            </TextView>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:textColor="@color/colorBlack"
                                android:text="@string/patient_note"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                            </TextView>
                            <TextView
                                android:paddingLeft="12dp"
                                android:id="@+id/txtBSTuVan"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                            </TextView>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:textColor="@color/colorBlack"
                                android:text="@string/patient_prescriptions"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                            </TextView>
                            <TextView
                                android:paddingLeft="12dp"
                                android:id="@+id/txtBSKeDonThuoc"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                            </TextView>
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>
            </ScrollView>
            <ProgressBar
                android:id="@+id/progressBarRecords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity = "center"
                android:visibility="gone"/>
        </FrameLayout>
        <RelativeLayout
            android:visibility="gone"
            android:background="@color/colorTran"
            android:id="@+id/relativeLayoutLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </RelativeLayout>
        <LinearLayout
            android:visibility="gone"
            android:id="@+id/linearProgress"
            android:paddingBottom="12dp"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"/>
            <TextView
                android:textColor="@color/colorBlack"
                android:textSize="18dp"
                android:layout_gravity="center"
                android:text="Đang xử lí"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>