<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.Inquiry.CreateInquiriActivity">
    <androidx.appcompat.widget.Toolbar
        app:theme="@style/ToolbarTheme"
        android:id="@+id/toolBarTaoTuVan"
        app:title="@string/create_inquiries"
        app:titleTextColor="@color/colorAccent1"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorAccent1"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Activities.Inquiry.CreateInquiriActivity">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_gravity="center"
                    android:id="@+id/textViewTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/tu_van"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:layout_gravity="center"
                    android:id="@+id/radioGroupType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewTV">

                    <RadioButton
                        android:checked="true"
                        android:id="@+id/radioButtonhealth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:text="@string/health"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/radioButtonNutri"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:text="@string/nutrition"
                        android:textSize="18sp" />
                </RadioGroup>

                <EditText
                    android:id="@+id/editTextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:ems="10"
                    android:hint="@string/description"
                    android:inputType="textMultiLine"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewDescriptionRep" />
                <LinearLayout
                    android:layout_marginTop="12dp"
                    android:id="@+id/linearChonHinh"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/textViewHinhanh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginLeft="24dp"
                        android:text="@string/image"
                        />
                    <Button
                        android:id="@+id/buttonAddAnh"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginLeft="24dp"
                        android:background="@mipmap/ic_add2"
                        />
                </LinearLayout>
                <!-- <ImageView
                     android:id="@+id/imgTest"
                     android:src="@mipmap/ic_launcher"
                     android:layout_width="100dp"
                     android:layout_height="100dp">

                 </ImageView>-->
                <GridView
                    android:numColumns="2"
                    android:id="@+id/gridViewHinhAnh"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    />
            </LinearLayout>
            <Button
                android:layout_gravity="bottom"
                android:background="@drawable/custombutton"
                android:id="@+id/buttonSubmit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="24dp"
                android:text="@string/sent"
                android:textSize="24sp"
                android:textStyle="bold" />
        </FrameLayout>
        <RelativeLayout
            android:visibility="gone"
            android:background="@color/colorTran"
            android:id="@+id/relativeLayoutLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </RelativeLayout>
        <LinearLayout
            android:visibility="gone"
            android:id="@+id/linearProgress"
            android:paddingBottom="12dp"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"/>
            <TextView
                android:textColor="@color/colorBlack"
                android:textSize="18dp"
                android:layout_gravity="center"
                android:text="Đang xử lí"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>