<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.Records.RecordsActivity">
    <androidx.appcompat.widget.Toolbar
        app:theme="@style/ToolbarTheme"
        android:id="@+id/toolbarRecordList"
        app:title="@string/records_list"
        app:titleTextColor="@color/colorAccent1"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </androidx.appcompat.widget.Toolbar>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorAccent1"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:background="#F7EFEEEE"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioGroup
                    android:gravity="center"
                    android:id="@+id/rdGroup"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:checked="true"
                        android:id="@+id/rdSucKhoe"
                        android:text="@string/health"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <RadioButton
                        android:id="@+id/rdDinhDuong"
                        android:text="@string/nutrition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RadioGroup>
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ListView
                    android:id="@+id/lvRecords"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/progressBarRecords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity = "center"
                    android:visibility="gone"/>
            </FrameLayout>
        </LinearLayout>
        <RelativeLayout
            android:visibility="gone"
            android:background="@color/colorTran"
            android:id="@+id/relativeLayoutLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </RelativeLayout>
        <LinearLayout
            android:visibility="gone"
            android:id="@+id/linearProgress"
            android:paddingBottom="12dp"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"/>
            <TextView
                android:textColor="@color/colorBlack"
                android:textSize="18dp"
                android:layout_gravity="center"
                android:text="Đang xử lí"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>